teste de atualiza~]ao

--- a/index.html
+++ b/index.html
@@ -17,39 +17,17 @@
     <!-- iOS meta tags and icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Connect Peeople">
+    <meta name="apple-mobile-web-app-title" content="Cripto">
     <link rel="apple-touch-icon" href="icons/152.png">
 
-    <meta name="description" content="App para conectar pessoas da TI">
-    <meta name="theme-color" content="#b0029f" />
+    <meta name="description" content="App para conhecer Criptomoedas">
+    <meta name="theme-color" content="#000" />
 
-    <title>Connect Peeople - App</title>
+    <title>Cripto - App</title>
   </head>
   <body>
 
     <!-- Detalhamento do Card-->
-
-    <!-- Modal -->
-    <div class="modal fade" id="fullProfile" tabindex="-1" aria-labelledby="fullProfile" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content">
-            <div class="modal-header">
-            <h5 class="modal-title" id="fullProfile_Title">---</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body" id="fullProfile_Body">
-                <h5>Exeperiência:</h5>
-                <span id="fullProfile_Experiencia"></span>
-                <h5>Formação Profissional:</h5>
-                <span id="fullProfile_Formacao"></span>
-                <h5>Habilidades:</h5>
-                <span id="fullProfile_Habilidade"></span>
-
-            </div>
-        </div>
-        </div>
-    </div>
-
 
     <header class="container-fluid fixed-top">
         <img src="imgs/logo1.png" class="logo">
@@ -67,8 +45,6 @@
 
     <footer class="container-fluid fixed-bottom">
         <div class="btn-group " role="group" aria-label="Menu Footer">
-            <button type="button" class="btn btn-primary">Perfil</button>
-            <button type="button" class="btn btn-primary">Friends</button>
             <button type="button" class="btn btn-danger" hidden id="btInstall">Instalar App</button>
           </div>
     </footer>
